# tworg

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_converter.py
tests/examples/: Ansible for DevOps_ Server and configuration management for humans.tid  Load testing wiki.muumu.us.org  Load testing wiki.muumu.us.tid
tid2org/: __main__.py  tid2org.py
tworg/: __main__.py  console.py  tworg.py
